## $Id: Makefile.am 1421 2006-11-01 01:15:40Z cegrant $
##
## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

DATAFILES = \
  meme.INO_up800.oops \
  meme.INO_up800.oops.nz \
  meme.INO_up800.tcm \
  meme.INO_up800.tcm.nz \
  meme.INO_up800.zoops \
  meme.INO_up800.zoops.nz \
  meme.adh.oops \
  meme.adh.oops.cv \
  meme.adh.oops.nz \
  meme.adh.tcm \
  meme.adh.tcm.cv \
  meme.adh.tcm.nz \
  meme.adh.zoops \
  meme.adh.zoops.cv \
  meme.adh.zoops.nz \
  meme.crp0.oops \
  meme.crp0.oops.cv \
  meme.crp0.oops.nz \
  meme.crp0.tcm \
  meme.crp0.tcm.cv \
  meme.crp0.tcm.nz \
  meme.crp0.zoops \
  meme.crp0.zoops.cv \
  meme.crp0.zoops.nz \
  meme.farntrans5.oops \
  meme.farntrans5.oops.nz \
  meme.farntrans5.tcm \
  meme.farntrans5.tcm.nz \
  meme.farntrans5.zoops \
  meme.farntrans5.zoops.nz \
  meme.lex0.zoops \
  meme.lipocalin.oops \
  meme.lipocalin.oops.nz \
  meme.lipocalin.tcm \
  meme.lipocalin.tcm.nz \
  meme.lipocalin.zoops \
  meme.lipocalin.zoops.nz \
  meme.psp_test.zoops

EXTRA_DIST = $(DATAFILES)
